k8s/k8s-liveness-socket.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-socket
  labels:
    test: liveness
spec:
  containers:
    - name: liveness
      image: cnych/goproxy
      ports:
        - containerPort: 8080
      readinessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
      livenessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 15
        periodSeconds: 20
