k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube100-site
  labels:
    app: web
spec:
  containers:
    - name: front-end
      image: nginx
      ports:
        - containerPort: 80

    - name: flaskapp-demo
      image: jcdemo/flaskapp
      ports:
        - containerPort: 5000
