k8s/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: kube-system
  # labels:
  #   app.kubernetes.io/name: ingress-nginx
  #   app.kubernetes.io/part-of: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      nodePort: 30080
    - name: https
      port: 443
      protocol: TCP
      nodePort: 30443
  # selector:
  #   app.kubernetes.io/name: ingress-nginx
  #   app.kubernetes.io/part-of: ingress-nginx
