k8s/k8s-nginx-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    k8s-app: nginx
spec:
  selector:
    matchLabels:
      k8s-app: nginx
  template:
    metadata:
      name: nginx
      labels:
        k8s-app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80
    
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    k8s-app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
  type: NodePort
