k8s/kubia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubia
  template:
    metadata:
      labels:
        app: kubia
    spec:
      containers:
        - name: kubia
          image: luksa/kubia
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  selector:
    app: kubia
  ports:
    - name: http
      port: 80
      targetPort: 8080

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  # tls:
  #   - hosts:
  #       - kubia.cbpk.com
  #       secretName: kubia-secret
  rules:
    - host: kubia.cbpk.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubia
              servicePort: 80
