k8s/nexus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-data-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  selector:
    app: nexus
  ports:
    - name: web
      port: 80
      targetPort: 8081

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nexus.cbpk.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nexus
              servicePort: 80
